Fix white space appearing at bottom of pages
The adminLTE init scrpit app.js set the div.content-wrapper height to
window height minus header (and footer) height using jquery.
Due to an early design error div.content-wrapper is part of the react
components, so it gets re-rendered on every page switch,
with no additional property set.
This commit fix this bug.

--- a/client/style/main.scss
+++ b/client/style/main.scss
@@ -1,5 +1,14 @@
 /* Add custom styles here */
 
+.wrapper , #appView, div[data-reactid=".0"] {
+  min-height : 100vh;
+}
+
+#map-loader {
+  padding: 20px;
+  color: #ECF0F5;
+}
+
 .label {
   float: left;
   margin: 3px 2px;
